[Tool] set default jdk11 options if not provided in fe.conf (#29785)
* Fixes #29734

Signed-off-by: Kevin Xiaohua Cai <caixiaohua@starrocks.com>